--- a/ex01.html
+++ b/ex01.html
@@ -8,6 +8,7 @@
 <body>
     <h1><a href="#">WEB</a></h1>
     <input type="button" value="night">
+    <input type="button" value="day">
     <ol>
         <li><a href="#">HTML</a></li>
         <li><a href="#">CSS</a></li>
@@ -15,7 +16,7 @@
     </ol>
     <h2>JavaScript란 무엇인가?</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste esse non adipisci mollitia ex facere iusto quasi deserunt accusantium minus, quas nobis deleniti quis voluptates animi explicabo. Consectetur laboriosam sapiente saepe tempore fuga perspiciatis eius molestiae asperiores natus id dolores dolorem, nemo, voluptatum doloremque architecto rem et praesentium repellat eligendi voluptate fugiat quisquam facere? Velit assumenda, dolores exercitationem nemo molestias tempore ad neque blanditiis nulla reiciendis alias qui rem voluptatum illo doloribus saepe in aspernatur dolore, deserunt inventore, nobis ab voluptatem at aut. Saepe minus dolores quo sequi sed porro libero nesciunt, adipisci enim eligendi odit aperiam iusto ad eaque.</p>
-    <input type="button" value="night">
+    
 
     <script>
         // document.write('자바스크립트');
