--- a/ex01.html
+++ b/ex01.html
@@ -38,12 +38,12 @@
     <script>
         // "night" 버튼 클릭 이벤트
         document.querySelector('.night').onclick = function(){
-
+            fnNight();
         };
 
         // "day" 버튼 클릭 이벤트
         document.querySelector('.day').onclick = function(){
-            
+            fnDay();
         }
 
         // 야간화면 fnNight()
